[gd_scene load_steps=14 format=3 uid="uid://4v3igpipcu6i"]

[ext_resource type="Texture2D" uid="uid://cd2bktiiba0je" path="res://Assets/Images/User interface/ItemDescription/top left.png" id="2_34ftr"]
[ext_resource type="Texture2D" uid="uid://cb73f85qmedbc" path="res://Assets/Images/User interface/ItemDescription/top middle.png" id="3_7ilk6"]
[ext_resource type="Texture2D" uid="uid://cx7507221igb4" path="res://Assets/Images/User interface/ItemDescription/top right.png" id="4_tiytc"]
[ext_resource type="Script" path="res://InventoryLogic/ItemDescription.gd" id="5"]
[ext_resource type="Texture2D" uid="uid://bqx0jyd7h205w" path="res://Assets/Images/User interface/ItemDescription/middle left.png" id="5_2cf8m"]
[ext_resource type="Texture2D" uid="uid://cm4fkbdmd2ipp" path="res://Assets/Images/User interface/ItemDescription/middle middle.png" id="6_0eqgx"]
[ext_resource type="Texture2D" uid="uid://d0gjpcrw8xril" path="res://Assets/Images/User interface/ItemDescription/middle right.png" id="7_g2abe"]
[ext_resource type="Texture2D" uid="uid://fn688m8acb53" path="res://Assets/Images/User interface/ItemDescription/bottom left.png" id="8_acctb"]
[ext_resource type="Texture2D" uid="uid://bg87pb5sopgdj" path="res://Assets/Images/User interface/ItemDescription/bottom middle.png" id="9_7sn8p"]
[ext_resource type="Texture2D" uid="uid://dvvmfhcou6gfm" path="res://Assets/Images/User interface/ItemDescription/bottom right.png" id="10_s73ij"]
[ext_resource type="Theme" uid="uid://d3voewdqos1nj" path="res://Assets/Themes/text.tres" id="11_h4s0r"]
[ext_resource type="Texture2D" uid="uid://7h6d6ae8oxok" path="res://Assets/Images/User interface/ItemDescription/energy icon.png" id="12_g4stj"]
[ext_resource type="Texture2D" uid="uid://cxk65b0her4at" path="res://Assets/Images/User interface/ItemDescription/health icon.png" id="13_pl4l4"]

[node name="ItemDescription" type="Node2D"]
z_index = 2
scale = Vector2(3, 3)
script = ExtResource("5")

[node name="GridContainer" type="VBoxContainer" parent="."]
offset_right = 39.0
offset_bottom = 36.0
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="TopRow" type="GridContainer" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 0
columns = 3

[node name="TopLeft" type="TextureRect" parent="GridContainer/TopRow"]
layout_mode = 2
texture = ExtResource("2_34ftr")

[node name="TopMiddle" type="TextureRect" parent="GridContainer/TopRow"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("3_7ilk6")
stretch_mode = 1

[node name="TopRight" type="TextureRect" parent="GridContainer/TopRow"]
layout_mode = 2
texture = ExtResource("4_tiytc")
stretch_mode = 1

[node name="MiddleRow" type="GridContainer" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 0
columns = 3

[node name="MiddleLeft" type="TextureRect" parent="GridContainer/MiddleRow"]
layout_mode = 2
texture = ExtResource("5_2cf8m")
stretch_mode = 1

[node name="MiddleMiddle" type="TextureRect" parent="GridContainer/MiddleRow"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("6_0eqgx")
expand_mode = 1

[node name="MiddleRight" type="TextureRect" parent="GridContainer/MiddleRow"]
layout_mode = 2
texture = ExtResource("7_g2abe")
stretch_mode = 1

[node name="BottomRow" type="GridContainer" parent="GridContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 0
columns = 3

[node name="BottomLeft" type="TextureRect" parent="GridContainer/BottomRow"]
layout_mode = 2
texture = ExtResource("8_acctb")

[node name="BottomMiddle" type="TextureRect" parent="GridContainer/BottomRow"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("9_7sn8p")
expand_mode = 1

[node name="BottomRight" type="TextureRect" parent="GridContainer/BottomRow"]
layout_mode = 2
texture = ExtResource("10_s73ij")
stretch_mode = 1

[node name="Body" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(320, 188)
offset_left = 5.0
offset_top = 4.5
offset_right = 731.0
offset_bottom = 1512.5
scale = Vector2(0.041, 0.041)

[node name="ItemName" type="Label" parent="Body"]
layout_mode = 2
theme = ExtResource("11_h4s0r")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 10
theme_override_constants/shadow_offset_y = 10
theme_override_font_sizes/font_size = 220
text = "Stone"

[node name="Control" type="Control" parent="Body"]
custom_minimum_size = Vector2(2.08165e-12, 56)
layout_mode = 2

[node name="ItemCategory" type="Label" parent="Body"]
modulate = Color(0.733333, 0.380392, 1, 1)
layout_mode = 2
theme = ExtResource("11_h4s0r")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 8
theme_override_constants/shadow_offset_y = 8
theme_override_font_sizes/font_size = 112
text = "Resource"

[node name="ItemDescription" type="Label" parent="Body"]
custom_minimum_size = Vector2(2.08165e-12, 1)
layout_mode = 2
theme = ExtResource("11_h4s0r")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/line_spacing = -11
theme_override_font_sizes/font_size = 112
text = "Wood harveste"
autowrap_mode = 2

[node name="Energy" type="HBoxContainer" parent="Body"]
visible = false
custom_minimum_size = Vector2(0, 72)
layout_mode = 2

[node name="EnergyIcon" type="TextureRect" parent="Body/Energy"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
texture = ExtResource("12_g4stj")

[node name="EnergyAmount" type="Label" parent="Body/Energy"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
theme = ExtResource("11_h4s0r")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_font_sizes/font_size = 112
text = "+10 Energy"

[node name="Health" type="HBoxContainer" parent="Body"]
visible = false
layout_mode = 2

[node name="EnergyIcon" type="TextureRect" parent="Body/Health"]
custom_minimum_size = Vector2(100, 130)
layout_mode = 2
texture = ExtResource("13_pl4l4")

[node name="HealthAmount" type="Label" parent="Body/Health"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
theme = ExtResource("11_h4s0r")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_font_sizes/font_size = 112
text = "+10 Health"
